[EDP-DDM-9497] added module ddm-bpm-data-accessor and switched all variable accessing from direct to accessing through VariableAccessor
Change-Id: If132d823d95fe592a822f8fb429dc98857fc08ad